# wilor-mlx

./: .epistaxis-session.json  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench_wilor.py  dispatch_overhead.py
reviews/probolai/: mano-lbs-correctness_2026-06-07.md  public-surface-contract_2026-06-07.md  refinenet-grid-sample_2026-06-07.md  vit-backbone-correctness_2026-06-07.md  weight-loading-auto-download_2026-06-07.md
src/wilor_mlx/: __init__.py  convert.py  convert_mano.py  detector.py  mano.py  model.py  pipeline.py  refinenet.py  vit.py
tests/: test_detector.py
upstream_communications/: dfw-walkthrough.md  show-hn-comment.md  wave1-broad-demo-draft.md  wave1-hf-community-post.md  wave1-social-post.md  wave1-technical-post.md  wave1-wilor-author-note.md
