[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wilor-mlx"
version = "0.1.0"
description = "WiLoR hand pose estimation for Apple Silicon, rebuilt end-to-end in MLX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.22.0",
    "numpy",
    "scipy",
    "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/lyonsno/wilor-mlx"
Repository = "https://github.com/lyonsno/wilor-mlx"
"Model Card" = "https://huggingface.co/lyonsno/wilor-mlx"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
