[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wilor-mlx"
version = "0.3.0"
description = "WiLoR hand pose estimation for Apple Silicon, rebuilt end-to-end in MLX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Noah Lyons" },
]
keywords = ["mlx", "apple-silicon", "hand-pose", "wilor", "mano", "3d", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "mlx>=0.22.0",
    "numpy",
    "scipy",
    "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/lyonsno/wilor-mlx"
Repository = "https://github.com/lyonsno/wilor-mlx"
"Model Card" = "https://huggingface.co/BasinShapers/wilor-mlx"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
